crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__add_classes_to_svg__add_classes_to_svg.snap
---
source: crates/oxvg_optimiser/src/jobs/add_classes_to_svg.rs
expression: "test_config(r#\"{ \"addClassesToSvg\": {\n            \"classNames\": [\"mySvg\", \"size-big\"]\n        } }\"#,\n        None)?"
---
<svg xmlns="http://www.w3.org/2000/svg" class="mySvg size-big">
    test
</svg>
